# QtFakeTime

./: .gitignore  CMakeLists.txt  LICENSE  QtFakeTime.cpp  QtFakeTime.h  README.md
test/: CMakeLists.txt  test_QtFakeTime.cpp
